--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>superpom</artifactId>
-        <version>2.10</version>
+        <version>2.10</version> 
+        <relativePath/>
     </parent>
  
     <groupId>it.tidalwave.betterbeansbinding</groupId>
